// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test_parseManifestation 1`] = `
Array [
  Object {
    "dataField": "notes",
    "label": "Note",
    "value": Array [
      <div>
        Introduction, Barbara Larson;
        <div>
           
        </div>
      </div>,
      <div>
        Darwin, Burke, and the biological sublime, Barbara Larson;
        <div>
           
        </div>
      </div>,
      <div>
        Why is the peacock's tail so beautiful?, Laurence Shafe;
        <div>
           
        </div>
      </div>,
      <div>
        Art's 'contest with nature': Darwin, Haeckel, and the scientific art history of Alois Riegl, Marsha Morton;
        <div>
           
        </div>
      </div>,
      <div>
        Cultural selection and the shape of time, Larry Silver;
        <div>
           
        </div>
      </div>,
      <div>
        The evolution of culture or the cultural history of the evolutionary concept: epistemological problems at the interface between the two cultures, Sigrid Weigel;
        <div>
           
        </div>
      </div>,
      <div>
        On the development of a theory of representation in Darwin and Warburg, Sabine Flach;
        <div>
           
        </div>
      </div>,
      <div>
        On mimicry in Darwin and surrealism, Jan Soffner;
        <div>
           
        </div>
      </div>,
      <div>
        Contemporary art and the aesthetics of natural selection, Ellen Levy;
        <div>
           
        </div>
      </div>,
      <div>
        index
      </div>,
    ],
  },
]
`;

exports[`Test_parseManifestation 2`] = `
Array [
  Object {
    "dataField": "creators",
    "label": "Af",
    "value": <Link
      border={
        Object {
          "bottom": Object {
            "keepVisible": true,
          },
          "top": false,
        }
      }
      href="/find?q=some contributor"
    >
      some contributor
    </Link>,
  },
  Object {
    "dataField": "creators",
    "label": "Bidrag",
    "value": Array [
      <span>
        <Link
          border={
            Object {
              "bottom": Object {
                "keepVisible": true,
              },
              "top": false,
            }
          }
          href="/find?q=some contributor"
        >
          some contributor
        </Link>
        <br />
      </span>,
      <span>
        <Link
          border={
            Object {
              "bottom": Object {
                "keepVisible": true,
              },
              "top": false,
            }
          }
          href="/find?q=some other contributor"
        >
          some other contributor
        </Link>
        <br />
      </span>,
    ],
  },
  Object {
    "dataField": "notes",
    "label": "Note",
    "value": Array [
      <div>
        Introduction, Barbara Larson;
        <div>
           
        </div>
      </div>,
      <div>
        Darwin, Burke, and the biological sublime, Barbara Larson;
        <div>
           
        </div>
      </div>,
      <div>
        Why is the peacock's tail so beautiful?, Laurence Shafe;
        <div>
           
        </div>
      </div>,
      <div>
        Art's 'contest with nature': Darwin, Haeckel, and the scientific art history of Alois Riegl, Marsha Morton;
        <div>
           
        </div>
      </div>,
      <div>
        Cultural selection and the shape of time, Larry Silver;
        <div>
           
        </div>
      </div>,
      <div>
        The evolution of culture or the cultural history of the evolutionary concept: epistemological problems at the interface between the two cultures, Sigrid Weigel;
        <div>
           
        </div>
      </div>,
      <div>
        On the development of a theory of representation in Darwin and Warburg, Sabine Flach;
        <div>
           
        </div>
      </div>,
      <div>
        On mimicry in Darwin and surrealism, Jan Soffner;
        <div>
           
        </div>
      </div>,
      <div>
        Contemporary art and the aesthetics of natural selection, Ellen Levy;
        <div>
           
        </div>
      </div>,
      <div>
        index
      </div>,
    ],
  },
]
`;
